--- a/package.json
+++ b/package.json
@@ -20,7 +20,20 @@
     "popper.js": "^1.14.6",
     "rxjs": "^6.3.3",
     "zone.js": "^0.8.26"
+  {
+  "name": "anamolydetector",
+  "version": "1.0.0",
+  "dependencies": {
+    "@angular/animations": "12.2.0",
+    "@angular/common": "12.2.0",
+    // … other existing deps …
++   "xlsx": "^0.18.5"
   },
+  "devDependencies": {
+    // …
+  }
+}
+},
   "scripts": {
     "ng": "npx --no-install ng",
     "start": "npx --no-install ng serve",
