--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
-  "name": "angular",
-  "version": "0.0.0",
+  "name": "anamolydetector",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@angular/common": "^7.0.1",
-    "@angular/compiler": "^7.0.1",
-    "@angular/core": "^7.0.1",
-    "@angular/forms": "^7.0.1",
-    "@angular/platform-browser": "^7.0.1",
-    "@angular/platform-browser-dynamic": "^7.0.1",
-    "@angular/router": "^7.0.1",
+    "@angular/animations": "12.2.0",
+    "@angular/common": "12.2.0",
+    "@angular/compiler": "12.2.0",
+    "@angular/core": "12.2.0",
+    "@angular/forms": "12.2.0",
+    "@angular/platform-browser": "12.2.0",
+    "@angular/platform-browser-dynamic": "12.2.0",
+    "@angular/router": "12.2.0",
     "@fortawesome/fontawesome-free": "^5.6.1",
     "@types/jquery": "^3.3.27",
     "@types/popper.js": "^1.11.0",
@@ -19,21 +20,9 @@
     "jquery": "^3.3.1",
     "popper.js": "^1.14.6",
     "rxjs": "^6.3.3",
-    "zone.js": "^0.8.26"
-  {
-  "name": "anamolydetector",
-  "version": "1.0.0",
-  "dependencies": {
-    "@angular/animations": "12.2.0",
-    "@angular/common": "12.2.0",
-    // … other existing deps …
-+   "xlsx": "^0.18.5"
+    "zone.js": "^0.8.26",
+    "xlsx": "^0.18.5"
   },
-  "devDependencies": {
-    // …
-  }
-}
-},
   "scripts": {
     "ng": "npx --no-install ng",
     "start": "npx --no-install ng serve",
