--- a/package.json
+++ b/package.json
@@ -50,6 +50,13 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.3.5"
+        "typescript": "~4.3.5"
+  },                     
+  "engines": {
+    "node": "16.x",
+    "npm": "8.x"
   }
 }
+
+  
+
