--- a/package.json
+++ b/package.json
@@ -40,13 +40,13 @@
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "codelyzer": "^6.0.0",
-    "jasmine-core": "~3.6.0",
+    "jasmine-core": "~3.8.0",                         // bumped to satisfy reporter’s peerDep :contentReference[oaicite:0]{index=0}
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.3",
     "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
+    "karma-jasmine-html-reporter": "^1.6.0",         // bumped from ^1.5.0 to 1.6.0 :contentReference[oaicite:1]{index=1}
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
