--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -1,18 +1,16 @@
+// tsconfig.json
 {
-  "extends": "../tsconfig.json",
+  "compileOnSave": false,
   "compilerOptions": {
-   
-    "outDir": "../out-tsc/app",
-    
-    "types": []
-  },
-  
-  "files": [
-    "main.ts",
-    "polyfills.ts"
-  ],
- 
-  "include": [
-    "**/*.d.ts"
-  ]
+    "baseUrl": "./",
+    "outDir": "./dist/out-tsc",
+    "sourceMap": true,
+    "declaration": false,
+    "moduleResolution": "node",
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "target": "es2015",
+    "typeRoots": ["node_modules/@types"],
+    "lib": ["es2018", "dom"]
+  }
 }
