--- a/angular.json
+++ b/angular.json
@@ -29,6 +29,7 @@
           },
           "configurations": {
             "production": {
+              // ← fileReplacements added here:
               "fileReplacements": [
                 {
                   "replace": "src/environments/environment.ts",
@@ -72,7 +73,7 @@
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
             "styles": [
-              "styles.css"
+              "src/styles.css"
             ],
             "scripts": [],
             "assets": [
