--- a/package.json
+++ b/package.json
@@ -26,10 +26,10 @@
   "scripts": {
     "ng": "npx --no-install ng",
     "start": "npx --no-install ng serve",
-    "build": "ng build --configuration production"
+    "build": "ng build --configuration production",
     "test": "npx --no-install ng test",
     "lint": "npx --no-install ng lint",
-    "e2e": "npx --no-install ng e2e"
+    "e2e": "npx --no-install ng e2e",
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~12.2.18",
