--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "build": "ng build --configuration production",
     "test": "npx --no-install ng test",
     "lint": "npx --no-install ng lint",
-    "e2e": "npx --no-install ng e2e",
+    "e2e": "npx --no-install ng e2e"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~12.2.18",
