--- a/angular.json
+++ b/angular.json
@@ -13,7 +13,8 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/demo",
+            // ← updated here:
+            "outputPath": "dist/anamolydetector",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -29,7 +30,6 @@
           },
           "configurations": {
             "production": {
-              // ← fileReplacements added here:
               "fileReplacements": [
                 {
                   "replace": "src/environments/environment.ts",
@@ -39,7 +39,6 @@
               "optimization": true,
               "outputHashing": "all",
               "sourceMap": false,
-              
               "namedChunks": false,
               "aot": true,
               "extractLicenses": true,
